fix footer and avatar on mobile and smaller displays

--- a/src/components/footerComponent/FooterComponent.css
+++ b/src/components/footerComponent/FooterComponent.css
@@ -58,7 +58,9 @@ footer {
   }
 
   footer {
-    flex-direction: column;
+    flex-direction: row;
     gap: var(--spacing-sm);
+    height: auto;
+    padding: 0.5rem;
   }
 }
