--- a/src/components/introComponent/IntroComponent.css
+++ b/src/components/introComponent/IntroComponent.css
@@ -2,7 +2,7 @@
   color: var(--text-primary);
   margin-left: 40vw;
   margin-right: 40vw;
-  margin-top: -8rem;
+  margin-top: -10vh;
   z-index: 2;
   display: flex;
   flex-direction: column;
@@ -49,6 +49,7 @@
   .intro {
     margin-left: 25vw;
     margin-right: 25vw;
+    margin-top: -8vh;
   }
 }
 
@@ -56,6 +57,7 @@
   .intro {
     margin-left: 20vw;
     margin-right: 20vw;
+    margin-top: -7vh;
   }
 
   .intro-image {
@@ -72,6 +74,7 @@
   .intro {
     margin-left: 15vw;
     margin-right: 15vw;
+    margin-top: -6vh;
   }
 }
 
@@ -79,7 +82,7 @@
   .intro {
     margin-left: 10vw;
     margin-right: 10vw;
-    margin-top: -2.3rem;
+    margin-top: -5.5vh;
     padding: var(--spacing-sm);
   }
 
@@ -97,5 +100,6 @@
   .intro {
     margin-left: 3vw;
     margin-right: 3vw;
+    margin-top: -6vh;
   }
 }
